NJH-302 refactor: DivisionPack entity 에 역할주기 (unpack)
